# xyz

./: CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: main.yml
src/: app.rc  main.cpp
src/app/: app_settings.cpp  app_settings.h  data_dir.cpp  data_dir.h  global_player.cpp  global_player.h  theme.cpp  theme.h  tray_service.cpp  tray_service.h  window_manager.cpp  window_manager.h
src/core/: audio_metadata.cpp  audio_metadata.h  cover_cache.cpp  cover_cache.h  local_scanner.cpp  local_scanner.h  m3u_parser.cpp  m3u_parser.h  mpv_backend.cpp  mpv_backend.h  mpv_options.cpp  mpv_options.h  storage.cpp  storage.h  video_thumbnail.cpp  video_thumbnail.h
src/modules/: page.h
src/modules/home/: home_page.cpp  home_page.h
src/modules/iptv/player/: iptv_player_page.cpp  iptv_player_page.h
src/modules/iptv/sources/: iptv_sources_page.cpp  iptv_sources_page.h
src/modules/music/player/: music_player_page.cpp  music_player_page.h
src/modules/settings/: settings_page.cpp  settings_page.h
src/modules/video/player/: video_player_page.cpp  video_player_page.h
src/ui/: ui_base.cpp  ui_base.h  ui_widgets.cpp  ui_widgets.h
src/util/: file_util.cpp  file_util.h  fnv.cpp  fnv.h  string_util.cpp  string_util.h
